# backend/docs/swagger.json
@@ -811,10 +811,10 @@
                     }
                 ],
                 "responses": {
-                    "200": {
-                        "description": "OK",
+                    "201": {
+                        "description": "Test created with generated questions",
                         "schema": {
-                            "$ref": "#/definitions/dto.GenerateQuestionsResponse"
+                            "$ref": "#/definitions/dto.TestResponse"
                         }
                     },
                     "400": {
@@ -836,7 +836,7 @@
                         }
                     },
                     "500": {
-                        "description": "Generation failed",
+                        "description": "Generation failed or database error",
                         "schema": {
                             "$ref": "#/definitions/dto.ErrorResponse"
                         }
@@ -1173,6 +1173,10 @@
                 "created_at": {
                     "type": "string"
                 },
+                "error_msg": {
+                    "description": "Pointer to omit if null",
+                    "type": "string"
+                },
                 "file_name": {
                     "type": "string"
                 },
@@ -1183,6 +1187,10 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "parsed_text": {
+                    "description": "Pointer to omit if null",
                     "type": "string"
                 },
                 "status": {
@@ -1211,23 +1219,6 @@
             "properties": {
                 "error": {
                     "$ref": "#/definitions/dto.ErrorDetail"
-                }
-            }
-        },
-        "dto.GenerateQuestionsResponse": {
-            "type": "object",
-            "properties": {
-                "count": {
-                    "type": "integer"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "questions": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/dto.QuestionDTO"
-                    }
                 }
             }
         },
